<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/endCallButtons" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/endCallButtonsUpper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sec_endcall_buttons_margin_top" android:paddingStart="@dimen/sec_incall_buttons_padding_three" android:paddingEnd="@dimen/sec_incall_buttons_padding_three">
        <com.android.incallui.SecVoiceButton android:id="@id/viewContactButton" android:visibility="invisible" android:text="@string/secOnscreenViewContactText" android:drawableTop="@drawable/sec_endcall_button_contact_view" android:contentDescription="@string/description_secOnscreenViewContactText" android:layout_marginEnd="@dimen/sec_endcall_buttons_margin_between_vertical" style="@style/SecEndCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/createContactButton" android:visibility="invisible" android:text="@string/secOnscreenCreateContactText" android:drawableTop="@drawable/sec_endcall_button_contact_create" android:contentDescription="@string/secOnscreenCreateContactText" android:layout_marginEnd="@dimen/sec_endcall_buttons_margin_between_vertical" style="@style/SecEndCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/updateContactButton" android:visibility="invisible" android:text="@string/secOnscreenUpdateContactText" android:drawableTop="@drawable/sec_endcall_button_contact_update" android:contentDescription="@string/secOnscreenUpdateContactText" android:layout_marginEnd="@dimen/sec_endcall_buttons_margin_between_vertical" style="@style/SecEndCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/addEventButton" android:visibility="invisible" android:text="@string/secOnscreenAddEventText" android:drawableTop="@drawable/sec_extra_button_planner_icon" android:contentDescription="@string/secOnscreenAddEventText" style="@style/SecEndCallButton" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/endCallButtonsUnder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sec_end_under_button_margin_top" android:paddingStart="@dimen/sec_incall_buttons_padding_three" android:paddingEnd="@dimen/sec_incall_buttons_padding_three">
        <ViewStub android:id="@id/endCallButtonsMiddle_layout" android:layout="@layout/sec_end_call_buttons_middle_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginEnd="@dimen/sec_endcall_buttons_margin_between_vertical" />
        <com.android.incallui.SecVoiceButton android:id="@id/videoCallButton" android:text="@string/secOnscreenVideoCallText" android:drawableTop="@drawable/sec_endcall_button_videocall_icon" android:soundEffectsEnabled="false" android:contentDescription="@string/description_secOnscreenVideoCallText" android:layout_marginEnd="@dimen/sec_endcall_buttons_margin_between_vertical" style="@style/SecEndCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/voiceCallButton" android:text="@string/secOnscreenVoiceCallText" android:drawableTop="@drawable/sec_endcall_button_voicecall_icon" android:soundEffectsEnabled="false" android:contentDescription="@string/secOnscreenVoiceCallText" android:layout_marginEnd="@dimen/sec_endcall_buttons_margin_between_vertical" style="@style/SecEndCallButton" />
        <ViewStub android:id="@id/endcall_multisim_call_button_stub" android:layout="@layout/endcall_multisim_call_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" android:layout_marginEnd="@dimen/sec_endcall_buttons_margin_between_vertical" />
        <ViewStub android:id="@id/video_call_extra_stub" android:visibility="gone" android:layout="@layout/endcall_video_call_extra_stub" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginEnd="@dimen/sec_endcall_buttons_margin_between_vertical" />
        <com.android.incallui.SecVoiceButton android:id="@id/messageButton" android:text="@string/secOnscreenMessageText" android:drawableTop="@drawable/sec_endcall_button_message_icon" android:soundEffectsEnabled="false" android:contentDescription="@string/description_secOnscreenMessageText" style="@style/SecEndCallButton" />
    </LinearLayout>
</RelativeLayout>