<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/pagerCallButtons" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/inCallButtonsUpper" android:paddingTop="@dimen/sec_incall_buttons_padding_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sec_incall_pager_indicator_height" android:paddingStart="@dimen/sec_incall_buttons_padding_start">
        <com.android.incallui.SecVoiceButton android:enabled="false" android:id="@id/addCallButton" android:visibility="gone" android:text="@string/onscreenAddCallText" android:drawableTop="@drawable/sec_incall_button_add_call_icon" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" style="@style/SecInCallButton" />
        <ViewStub android:id="@id/switchToVideoButtonStub" android:visibility="gone" android:layout="@layout/sec_switch_to_video_button_layout" android:layout_width="@dimen/sec_incall_button_width" android:layout_height="@dimen/sec_incall_button_height" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" />
        <ViewStub android:id="@id/recordButtonStubUpper" android:visibility="gone" android:layout="@layout/sec_record_button_layout" android:layout_width="@dimen/sec_incall_button_width" android:layout_height="@dimen/sec_incall_button_height" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" />
        <com.android.incallui.SecVoiceButton android:enabled="false" android:id="@id/webexButton" android:visibility="gone" android:text="@string/onscreenWebexText" android:drawableTop="@drawable/sec_incall_button_webex_icon" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" style="@style/SecInCallButton" />
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/extraVolumeButton" android:textOn="@string/secOnscreenExtraVolumeText" android:textOff="@string/secOnscreenExtraVolumeText" android:drawableTop="@drawable/sec_incall_button_extra_volume_icon" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" style="@style/SecInCallButton" />
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/bluetoothButton" android:textOn="@string/audio_mode_bluetooth" android:textOff="@string/audio_mode_bluetooth" android:drawableTop="@drawable/sec_incall_button_bluetooth_icon" style="@style/SecInCallButton" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/inCallButtonsUnder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sec_incall_under_button_margin_top" android:paddingStart="@dimen/sec_incall_buttons_padding_start">
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/speakerButton" android:visibility="gone" android:textOn="@string/secOnscreenSpeaker" android:textOff="@string/secOnscreenSpeaker" android:drawableTop="@drawable/sec_incall_button_speaker_icon" android:soundEffectsEnabled="false" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" style="@style/SecInCallButton" />
        <ViewStub android:id="@id/recordButtonStubUnder" android:visibility="gone" android:layout="@layout/sec_record_button_layout" android:layout_width="@dimen/sec_incall_button_width" android:layout_height="@dimen/sec_incall_button_height" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" />
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/holdButton" android:visibility="gone" android:textOn="@string/secOnscreenResumeCallText" android:textOff="@string/onscreenHoldText" android:drawableTop="@drawable/sec_incall_button_hold_icon" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" style="@style/SecInCallButton" />
        <com.android.incallui.SecVoiceButton android:enabled="false" android:id="@id/dialpadButton" android:text="@string/secOnscreenKeypadText" android:drawableTop="@drawable/sec_incall_button_dialpad_icon" android:layout_marginEnd="@dimen/sec_incall_buttons_margin_between_vertical" style="@style/SecInCallButton" />
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/muteButton" android:textOn="@string/onscreenMuteText" android:textOff="@string/onscreenMuteText" android:drawableTop="@drawable/sec_incall_button_mute_icon" style="@style/SecInCallButton" />
    </LinearLayout>
</RelativeLayout>