<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/pagerCallButtons" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/inCallButtonsUpper" android:paddingTop="@dimen/sec_incall_buttons_padding_top_onehand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sec_incall_pager_indicator_height_onehand" android:paddingStart="@dimen/sec_incall_buttons_padding_start_onehand">
        <com.android.incallui.SecVoiceButton android:enabled="false" android:id="@id/cameraButton" android:visibility="gone" android:text="@string/secOnscreenCameraText" android:drawableTop="@drawable/sec_incall_button_camera_icon_vzw" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceButton android:enabled="false" android:id="@id/addCallButton" android:text="@string/onscreenAddCallText" android:drawableTop="@drawable/sec_incall_button_add_call_icon" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/rcsVideoButton" android:visibility="gone" android:text="@string/rcs_share_live_video" android:drawableTop="@drawable/incall_button_rcs_video_icon" style="@style/SecOnehandInCallButton" />
        <ViewStub android:id="@id/recordButtonStub" android:visibility="gone" android:layout="@layout/sec_onehand_record_button_layout" android:layout_width="@dimen/sec_incall_button_width_onehand" android:layout_height="wrap_content" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/extraVolumeButton" android:visibility="gone" android:textOn="@string/secOnscreenExtraVolumeText" android:textOff="@string/secOnscreenExtraVolumeText" android:drawableTop="@drawable/sec_incall_button_extra_volume_icon" android:soundEffectsEnabled="false" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
        <ViewStub android:id="@id/swisButtonStub" android:visibility="gone" android:layout="@layout/sec_swis_button_onehand_layout" android:layout_width="@dimen/sec_incall_button_width_onehand" android:layout_height="wrap_content" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" />
        <com.android.incallui.SecVoiceButton android:id="@id/rcsShareButton" android:visibility="gone" android:text="@string/rcs_share" android:drawableTop="@drawable/incall_button_rcs_share_icon" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/bluetoothButton" android:textOn="@string/audio_mode_bluetooth" android:textOff="@string/audio_mode_bluetooth" android:drawableTop="@drawable/sec_incall_button_bluetooth_icon" android:soundEffectsEnabled="false" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
        <ViewStub android:id="@id/oneWayCameraButtonStub" android:visibility="gone" android:layout="@layout/sec_one_way_camera_button_layout" android:layout_width="@dimen/sec_incall_button_width_onehand" android:layout_height="wrap_content" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/inCallButtonsUnder" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/sec_incall_under_button_margin_top_onehand" android:paddingStart="@dimen/sec_incall_buttons_padding_start_onehand">
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/speakerButton" android:textOn="@string/secOnscreenSpeaker" android:textOff="@string/secOnscreenSpeaker" android:drawableTop="@drawable/sec_incall_button_speaker_icon" android:soundEffectsEnabled="false" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceButton android:enabled="false" android:id="@id/dialpadButton" android:text="@string/secOnscreenKeypadText" android:drawableTop="@drawable/sec_incall_button_dialpad_icon" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceToggleButton android:enabled="false" android:id="@id/muteButton" android:textOn="@string/onscreenMuteText" android:textOff="@string/onscreenMuteText" android:drawableTop="@drawable/sec_incall_button_mute_icon" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
    </LinearLayout>
</RelativeLayout>