<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/inCallExtraButtonsUpper" android:paddingTop="@dimen/sec_incall_buttons_padding_top_onehand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sec_incall_pager_indicator_height_onehand" android:paddingStart="@dimen/sec_incall_buttons_padding_start_onehand">
        <com.android.incallui.SecVoiceButton android:id="@id/extraEmailButton" android:text="@string/secOnscreenEmailText" android:drawableTop="@drawable/voicecall_multitasking_ic_email" android:contentDescription="@string/secOnscreenEmailText" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/extraMessageButton" android:text="@string/secOnscreenMessageText" android:drawableTop="@drawable/voicecall_multitasking_ic_message" android:contentDescription="@string/secOnscreenMessageText" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/extraInternetButton" android:text="@string/secOnscreenInternetText" android:drawableTop="@drawable/voicecall_multitasking_ic_internet" android:contentDescription="@string/secOnscreenInternetText" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/inCallExtraButtonsUnder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sec_incall_under_button_margin_top_onehand" android:paddingStart="@dimen/sec_incall_buttons_padding_start_onehand">
        <com.android.incallui.SecVoiceButton android:id="@id/extraContactButton" android:text="@string/secOnscreenContactText" android:drawableTop="@drawable/sec_endcall_button_contact_view" android:contentDescription="@string/secOnscreenContactText" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/extraPlannerButton" android:text="@string/secOnscreenPlannerText" android:drawableTop="@drawable/voicecall_multitasking_ic_splanner" android:contentDescription="@string/secOnscreenPlannerText" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
        <com.android.incallui.SecVoiceButton android:id="@id/extraMemoButton" android:text="@string/secOnscreenMemoText" android:drawableTop="@drawable/voicecall_multitasking_ic_memo" android:contentDescription="@string/secOnscreenMemoText" android:layout_marginStart="@dimen/sec_incall_buttons_margin_between_vertical_onehand" style="@style/SecOnehandInCallButton" />
    </LinearLayout>
</RelativeLayout>